--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/secrets/*
 
 /public/packs
 /public/packs-test
